--- a/docs/billing/billing.mdx
+++ b/docs/billing/billing.mdx
@@ -1,14 +1,182 @@
 ---
-title: 'Billing'
-description: 'Display inline code and code blocks'
-icon: 'code'
+title: "Billing & Subscription"
+description: "Manage Trackpilots subscriptions, invoices, and billing settings"
+icon: "credit-card"
 ---
 
 import { Callout } from "mintlify";
 
 <Callout type="info">
-🔐 **Product Documentation – Coming Soon**
+💳 **Trackpilots Billing Overview**
 
-API documentation and access will be enabled shortly.  
-For early or customized API access, contact **team@trackpilots.com**.
+Manage your subscription plans, invoices, and payment settings from the Billing dashboard.
 </Callout>
+
+---
+
+## 📌 Overview
+
+Trackpilots offers flexible subscription plans for individuals, teams, and enterprises.  
+You can manage billing, download invoices, and upgrade or downgrade plans directly from your dashboard.
+
+---
+
+## 📦 Subscription Plans
+
+Trackpilots provides **Monthly** and **Yearly plans**.  
+💡 Yearly plans offer **up to 20% savings**.
+
+---
+
+### 🆓 Basic Plan (Free)
+
+**Perfect for individuals & small teams**
+
+**Features:**
+
+- ✔️ Unlimited users  
+- ✔️ Team & individual dashboards  
+- ✔️ Online & offline tracking  
+- ✔️ Screenshots every 20 minutes  
+- ✔️ Productivity ratings  
+- ✔️ Activity summary report  
+- ✔️ Attendance report  
+- ✔️ Live Stats  
+- ✔️ Timeline report  
+- ✔️ Chat support  
+
+---
+
+### ⭐ Starter Pack (Most Popular)
+
+**$3.99 per user / monthly**
+
+**Advanced tracking for teams & businesses**
+
+Includes everything in **Basic**, plus:
+
+- ✔️ Unlimited teams  
+- ✔️ Inactivity alerts  
+- ✔️ Screenshots every 1 minute  
+- ✔️ Last 1 year data retention  
+- ✔️ Last 3 months screenshot retention  
+- ✔️ Role-based access control  
+- ✔️ Daily, weekly & monthly email reports  
+- ✔️ Silent tracking  
+- ✔️ Data export (CSV / PDF)  
+- ✔️ Priority support  
+
+---
+
+## 📊 Plans & Features Comparison
+
+| Feature | Basic | Starter Pack |
+|----------|--------|--------------|
+| Users | Unlimited | Unlimited |
+| No. of Teams | Unlimited | Unlimited |
+| Online & Offline Tracking | ✔️ | ✔️ |
+| Screenshot Capture | Every 20 min | Every 1 min |
+| Productivity Ratings | ✔️ | ✔️ |
+| Activity Summary Report | Today | Last 1 year |
+| Attendance Report | Today | ✔️ |
+| Live Stats | ✔️ | ✔️ |
+| Historical Tracking Data | Today | Last 1 year |
+| Timeline Report | Today | ✔️ |
+| Inactivity Alerts | ✔️ | ✔️ |
+| Screenshot Retention | Today | Last 3 months |
+| Role-Based Access Control | ✔️ | ✔️ |
+| Silent Tracking | ✔️ | ✔️ |
+| Priority Support | ✔️ | ✔️ |
+
+---
+
+## 🔄 Subscription Management
+
+- Subscriptions auto-renew unless cancelled.  
+- You can **upgrade or downgrade plans anytime** from the Billing page.  
+- By clicking **Upgrade Now**, you agree to Trackpilots **[Payment Terms](https://trackpilots.com/terms-and-conditions)** and **[Refund Terms](https://trackpilots.com/refund-policy)**.
+
+---
+
+## 🧾 Invoices
+
+You can view and download invoices from the **Invoices** section.
+
+**Invoice Details Include:**
+
+- Invoice Number  
+- Invoice Date  
+- Currency  
+- Amount  
+- Payment Status  
+- Download Option  
+
+---
+
+### 📄 Sample Invoice Table
+
+| Sno | Invoice Number | Date | Currency | Amount | Status |
+|-----|----------------|------|----------|--------|--------|
+| 1 | 77001-10265 | Jan 13, 2025 | INR | 360.00 | Paid |
+| 2 | 77234-10020 | Feb 13, 2025 | USD | 472.00 | Paid |
+| 3 | 77306-10049 | Mar 13, 2025 | USD | 472.00 | Paid |
+
+---
+
+## ❓ Frequently Asked Questions
+
+---
+
+### 💰 Is there any hidden fee in the Pro plan?
+No. You are charged based on the **number of active users** in your account.
+
+### 💳 Do I need a credit card to try?
+Free plan does not require a credit card.  
+Paid plans require payment details during checkout.
+
+### 🧩 Is there any limitation in the free version?
+Yes. Free plan has limited screenshot frequency and historical data retention.
+
+### 🔁 How to change the credit card?
+You can update payment details from the Billing dashboard or through the payment provider portal.
+
+---
+
+## 📝 Billing Notes
+
+- All payments and taxes (including **GST for Indian customers**) are handled by **Paddle**.  
+- Annual plans offer **up to 20% discount** compared to monthly plans.  
+- Volume discounts start from **100 users**.  
+- Resellers and MSP partners can earn **up to 10% margins**.  
+
+---
+
+## 📞 Support
+
+For billing-related queries:
+
+- 💬 Use the in-app support chat  
+- 📧 Email: **team@trackpilots.com**
+
+---
+
+<Callout type="success">
+🚀 **Tip**
+
+Use yearly subscriptions to save more and simplify billing for large teams.
+</Callout>
+
+---
+
+## ✅ Summary
+
+Trackpilots billing system allows you to:
+
+- Manage subscriptions  
+- Download invoices  
+- Upgrade or downgrade plans  
+- Apply volume discounts  
+- Contact billing support easily  
+
+---
+
