--- a/docs/settings/brand-revamp.mdx
+++ b/docs/settings/brand-revamp.mdx
@@ -1,14 +1,94 @@
 ---
-title: 'Brand Rewamp'
-description: 'Display inline code and code blocks'
-icon: 'sliders'
+title: Brand Revamp
+description: Upcoming feature to customize organization branding in Trackpilots.
+icon: sliders
 ---
 
-import { Callout } from "mintlify";
+> 🚧 **Coming Soon**
 
-<Callout type="info">
-🔐 **Product Documentation – Coming Soon**
+The **Brand Revamp** feature will allow organizations to customize their branding in Trackpilots by updating the organization name and logo. This feature is currently under development and will be available in a future release.
 
-API documentation and access will be enabled shortly.  
-For early or customized API access, contact **team@trackpilots.com**.
-</Callout>
+🔗 **URL:**  [https://app.trackpilots.com/settings/brand-rewamp](https://app.trackpilots.com/settings/brand-rewamp)
+
+---
+
+## 📌 Overview
+
+Brand Revamp will enable organizations to:
+
+- Set their official organization name  
+- Upload a custom company logo  
+- Apply branding across the Trackpilots dashboard and reports  
+
+This feature is designed for enterprises that require **white-labeling and corporate branding** capabilities.
+
+---
+
+## 🏢 Organisation Name (Planned)
+
+Organisations will be able to define the official company name displayed across Trackpilots.
+
+### **Planned Usage**
+
+- Dashboard headers  
+- Reports & exports  
+- Notifications and emails  
+- System metadata and audit logs  
+
+---
+
+## 🖼 Organisation Logo (Planned)
+
+Admins will be able to upload a custom logo to replace the default Trackpilots logo.
+
+### **Planned Capabilities**
+
+- Upload company logo (PNG, JPG, SVG)  
+- Replace default branding across UI  
+- Show logo in reports and dashboards  
+
+---
+
+## 💾 Save Organisation Info (Planned)
+
+A **Save Organisation Info** action will persist branding changes and propagate them across Trackpilots interfaces.
+
+---
+
+## 🔐 Permissions & Access Control (Planned)
+
+Only authorized roles will be able to update branding:
+
+- Organisation Owner  
+- Admin  
+- Custom Role with Organisation Settings Permission  
+
+---
+
+## 🧩 Developer Notes (Planned)
+
+- Branding metadata will be stored in the **Organisation Metadata Service**  
+- Logos will be stored in object storage and served via CDN  
+- UI will support dynamic branding updates without redeploying clients  
+
+---
+
+## 📅 Release Status
+
+| Feature | Status |
+|---------|--------|
+| Organisation Name Update | 🚧 Coming Soon |
+| Organisation Logo Upload | 🚧 Coming Soon |
+| White-label UI Branding | 🚧 Coming Soon |
+
+---
+
+## ✅ Future Enhancements
+
+- Custom color themes  
+- Custom domain branding  
+- White-label desktop app branding  
+- Branded email templates  
+
+---
+
