--- a/docs/settings/manage-team.mdx
+++ b/docs/settings/manage-team.mdx
@@ -1,14 +1,74 @@
 ---
-title: 'Manage Team'
-description: 'Display inline code and code blocks'
+
+title: Manage Team
+# sidebar_position: 1
+description: Manage and organize teams in Trackpilots
 icon: 'paw'
 ---
 
-import { Callout } from "mintlify";
+The **Manage Team** page allows to create, edit, and delete teams and assign employees to the appropriate teams.
 
-<Callout type="info">
-🔐 **Product Documentation – Coming Soon**
+> URL: [https://app.trackpilots.com/settings/manage-team](https://app.trackpilots.com/settings/manage-team)
 
-API documentation and access will be enabled shortly.  
-For early or customized API access, contact **team@trackpilots.com**.
-</Callout>
+---
+
+## 📌 Overview
+
+Teams help you organize employees based on roles, departments, or projects. Once a team is created, employees can be assigned from the **[Manage Employees](/docs/settings/manage-employee)** page.
+
+---
+
+## ➕ Create New Team
+
+To create a new team:
+
+1. Navigate to **Settings → Manage Team**.
+2. Click **Create New Team**.
+3. Enter the **Team Name**.
+4. Click **Save**.
+
+## ✏️ Edit Team
+
+You can modify an existing team name.
+
+**Steps:**
+
+1. Click **Edit** next to the team.
+2. Update the team name.
+3. Click **Save Changes**.
+
+---
+
+## 🗑 Delete Team
+
+You can remove a team if it is no longer required.
+
+**Steps:**
+
+1. Click **Delete** next to the team.
+2. Confirm the deletion.
+
+> ⚠️ Note: Employees assigned to the deleted team must be reassigned manually.
+
+---
+
+## 👤 Assign Employees to Teams
+
+After creating a team, assign employees from the **[Manage Employees](/docs/settings/manage-employee)** page.
+
+**Steps:**
+
+1. Go to **[Manage Employees](/docs/settings/manage-employee)**.
+2. Select the employee.
+3. Choose the respective team.
+4. Save the changes.
+
+---
+
+## 📎 Best Practices
+
+* Use short and meaningful team names (e.g., Frontend Team, Backend Team).
+* Create teams based on roles, department or project structure.
+* Avoid deleting teams without reassigning employees.
+
+---
